tests/snapshots/end2end__end2end_vertical_left_with_action_change_tab.snap
---
source: tests/end2end.rs
assertion_line: 215
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
4                                                                                |
5                                                                                |
6                                                                                |
7                                                                                |
8                                           ┌─────┐                              |
9                               ━━━━━━━━━━━━━Pshhh│                              |
0                                Stronk test h    │                              |
1                             ━━━━━━━━━━━━━━━     │                              |
2                              Stronker test      │                              |
3                             ──────────────┬     │                              |
4                                           └─────┘                              |
5                                                                                |
6                                                                                |
7                                                                                |
8                                                                                |
9                                                                                |
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
x--------------------------------------------------------------------------------x
